default/objects/E2E_Form_Ru_General_Settings__c/E2E_Form_Ru_General_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>E2E Form Ru General Settings</label>
</CustomObject>