default/objects/E2E_Form_Ru_General_Settings__c/fields/AES256_key__c.field-meta.xml
<CustomField>
    <fullName>AES256_key__c</fullName>
    <label>AES256_key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>