default/objects/E2E_Form_Ru_General_Settings__c/fields/Async_Response_URL__c.field-meta.xml
<CustomField>
    <fullName>Async_Response_URL__c</fullName>
    <label>Async Response URL</label>
    <type>Url</type>
</CustomField>