default/objects/E2E_Form_Ru_General_Settings__c/fields/Call_Center_Managers__c.field-meta.xml
<CustomField>
    <fullName>Call_Center_Managers__c</fullName>
    <description>Responsible manager from call center department.</description>
    <label>Call Center Managers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>