default/objects/E2E_Form_Ru_General_Settings__c/fields/Domain_Url__c.field-meta.xml
<CustomField>
    <fullName>Domain_Url__c</fullName>
    <label>Domain Url</label>
    <type>Url</type>
</CustomField>