default/objects/E2E_Form_Ru_General_Settings__c/fields/E2EBUS_CardNumLimit__c.field-meta.xml
<CustomField>
    <fullName>E2EBUS_CardNumLimit__c</fullName>
    <description>Лимит по картам для формы E2E Business</description>
    <inlineHelpText>Лимит по картам для формы E2E Business</inlineHelpText>
    <label>E2E Bus card num limit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>