default/objects/E2E_Form_Ru_General_Settings__c/fields/Enable_caching__c.field-meta.xml
<CustomField>
    <fullName>Enable_caching__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable caching</label>
    <type>Checkbox</type>
</CustomField>