default/objects/E2E_Form_Ru_General_Settings__c/fields/External_Call_Center_Managers__c.field-meta.xml
<CustomField>
    <fullName>External_Call_Center_Managers__c</fullName>
    <label>External Call Center Managers</label>
    <type>TextArea</type>
</CustomField>