default/objects/E2E_Form_Ru_General_Settings__c/fields/External_Main_Managers__c.field-meta.xml
<CustomField>
    <fullName>External_Main_Managers__c</fullName>
    <label>External Main Managers</label>
    <type>TextArea</type>
</CustomField>