default/objects/E2E_Form_Ru_General_Settings__c/fields/Inbound_Managers__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Managers__c</fullName>
    <description>Responsible managers from Inbound department.</description>
    <label>Inbound Managers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>