default/objects/E2E_Form_Ru_General_Settings__c/fields/Locator_Gaz_url__c.field-meta.xml
<CustomField>
    <fullName>Locator_Gaz_url__c</fullName>
    <description>Ссылка на локатор по Газпром</description>
    <label>Locator Gaz</label>
    <type>Url</type>
</CustomField>