default/objects/E2E_Form_Ru_General_Settings__c/fields/Locator_Rover_url__c.field-meta.xml
<CustomField>
    <fullName>Locator_Rover_url__c</fullName>
    <description>Ссылка на локатор по Вездеход online</description>
    <label>Locator Rover</label>
    <type>Url</type>
</CustomField>