default/objects/E2E_Form_Ru_General_Settings__c/fields/Locator_Shell_url__c.field-meta.xml
<CustomField>
    <fullName>Locator_Shell_url__c</fullName>
    <description>Ссылка на локатор по Shell</description>
    <label>Locator Shell</label>
    <type>Url</type>
</CustomField>