default/objects/E2E_Form_Ru_General_Settings__c/fields/Main_Managers__c.field-meta.xml
<CustomField>
    <fullName>Main_Managers__c</fullName>
    <label>Main Managers</label>
    <type>TextArea</type>
</CustomField>