default/objects/E2E_Form_Ru_General_Settings__c/fields/Manual_Input__c.field-meta.xml
<CustomField>
    <fullName>Manual_Input__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Input</label>
    <type>Checkbox</type>
</CustomField>