default/objects/E2E_Form_Ru_General_Settings__c/fields/Middleware_Token__c.field-meta.xml
<CustomField>
    <fullName>Middleware_Token__c</fullName>
    <label>Middleware Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>