default/objects/E2E_Form_Ru_General_Settings__c/fields/Middleware_Url__c.field-meta.xml
<CustomField>
    <fullName>Middleware_Url__c</fullName>
    <label>Middleware Url</label>
    <type>Url</type>
</CustomField>