default/objects/E2E_Form_Ru_General_Settings__c/fields/Number_Of_Cards__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Cards__c</fullName>
    <description>Maximum number of cards, which client can order without going to inbound department.</description>
    <label>Number Of Cards</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>