default/objects/E2E_Form_Ru_General_Settings__c/fields/Number_of_Cards_Card__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Cards_Card__c</fullName>
    <description>The number of cards at which the subscriber fee will be taken from the card</description>
    <label>Number of Cards (from cards)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>