default/objects/E2E_Form_Ru_General_Settings__c/fields/Prepay_Amount__c.field-meta.xml
<CustomField>
    <fullName>Prepay_Amount__c</fullName>
    <label>Prepay Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>