default/objects/E2E_Form_Ru_General_Settings__c/fields/Send_Contract_To_Client__c.field-meta.xml
<CustomField>
    <fullName>Send_Contract_To_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Contract To Client</label>
    <type>Checkbox</type>
</CustomField>