default/objects/E2E_Form_Ru_General_Settings__c/fields/Send_To_Inbound__c.field-meta.xml
<CustomField>
    <fullName>Send_To_Inbound__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send To Inbound</label>
    <type>Checkbox</type>
</CustomField>