default/objects/E2E_Form_Ru_General_Settings__c/fields/Service_Managers__c.field-meta.xml
<CustomField>
    <fullName>Service_Managers__c</fullName>
    <label>Service Managers</label>
    <type>TextArea</type>
</CustomField>