default/objects/E2E_Form_Ru_General_Settings__c/fields/Show_Banner__c.field-meta.xml
<CustomField>
    <fullName>Show_Banner__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Banner</label>
    <type>Checkbox</type>
</CustomField>