default/objects/E2E_Form_Ru_General_Settings__c/fields/Test_Middleware_Url__c.field-meta.xml
<CustomField>
    <fullName>Test_Middleware_Url__c</fullName>
    <label>Test Middleware Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>